# mavlogread

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh
.github/workflows/: build.yml
include/: args.hpp  dumper.hpp  vis.hpp
src/: main.cpp
